# the-minstrel

./: .gitignore  Cargo.toml  LICENSE  TODO.md
db/: Cargo.toml
db/migrations/: 20220611192055_initial.down.sql  20220611192055_initial.up.sql
db/src/: dbadapter.rs  lib.rs  model.rs
discord/: Cargo.toml
discord/src/: client.rs  helpers.rs  lib.rs  player.rs  requester.rs  state.rs  userconv.rs  web.rs
discord/src/commands/: autoplay.rs  debug.rs  general.rs  helpers.rs  mod.rs  musicctl.rs  queuectl.rs
discord/src/frontend/: framework.rs  mod.rs
discord/src/frontend/commands/: autoplay.rs  config.rs  debug.rs  general.rs  mod.rs  musicctl.rs  queuectl.rs  source.rs  user.rs
main/: Cargo.toml
main/src/: main.rs
main/src/discord/: mod.rs  requester.rs
main/src/discord/commands/: autoplay.rs  debug.rs  queuectl.rs
main/src/music/: autoplay.rs  mod.rs  musicstate.rs
minstrel-config/: Cargo.toml
minstrel-config/src/: discord.rs  lib.rs  web.rs
minstrel-config/src/configs/: mod.rs  music.rs  songlog.rs  user.rs
model/: Cargo.toml
model/src/: lib.rs  web.rs
music/: Cargo.toml
music/src/: autoplay.rs  lib.rs  musiccontroller.rs  musicstate.rs  player.rs  requester.rs  song.rs
music/src/adapters/: autoplayadapter.rs  mod.rs  musicadapter.rs  usermgmt.rs
src/: conf.rs  main.rs  music.rs
src/commands/: autoplay.rs  debug.rs  general.rs  helpers.rs  mod.rs  musicctl.rs  queuectl.rs
src/discord/: client.rs  conf.rs  mod.rs  player.rs  web.rs
src/discord/commands/: autoplay.rs  config.rs  debug.rs  helpers.rs  mod.rs  musicctl.rs  queuectl.rs
src/music/: autoplay.rs  conf.rs  mod.rs  musicstate.rs  player.rs  requester.rs  song.rs
webapi/: Cargo.toml
webapi/src/: api.rs  embed.rs  lib.rs  user.rs  web.rs
webdash/: Cargo.toml  Trunk.toml  index.html  index.scss
webdash/src/: components.rs  main.rs  wsbus.rs
webdash/src/components/: background.rs  helpers.rs  isloggedin.rs  login.rs  mod.rs  nowplaying.rs  playcontrols.rs  requester.rs  songlist.rs  songrow.rs
webdash/src/components/toast/: mod.rs  toastbus.rs  toasttray.rs  use_toast.rs
webdash/toast/: Cargo.toml
webdash/toast/src/: lib.rs  toastlist.rs  toasttray.rs
webdata/: Cargo.toml
webdata/src/: lib.rs
