[workspace]
members = [
	"minstrel-config",
	"music",
	"model",
	"discord",
	"webapi",
	"main",
	"webdash", # TODO: Figure out how to automatically use trunk to build
]

default-members = [
	"minstrel-config",
	"music",
	"model",
	"webapi",
	"discord",
	"main",
	# Not webdash, so we don't build a useless webdash native bin
]
