[workspace]
members = [
	"minstrel-config",
	"music",
	"db",
	"model",
	"discord",
	"webapi",
	"main",
	"webdash", # TODO: Figure out how to automatically use trunk to build
]

default-members = [
	"minstrel-config",
	"music",
	"db",
	"model",
	"webapi",
	"discord",
	"main",
	# Not webdash, so we don't build a useless webdash native bin
]

[profile.release]
lto = true

# Try to make the generated webassembly just a tad smaller
[profile.release.package.webdash]
opt-level = 'z' # try 'z' or 's'
strip = "symbols"