[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1.0"
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }


tokio = { version = "1.0", features = ["sync"] }
minstrelmodel = { path = "../model", package = "model" }