[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
youtube_dl = { version = "0.7.0", features = ["yt-dlp"], default-features = false }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
async-trait = "0.1"
config = "0.12"
warp = "0.3"
futures-util = "*"

minstrel-config = { path = "../minstrel-config" }
music = { path = "../music" }
webdata = { path = "../webdata" }

[dependencies.serenity]
default-features = false
# TODO: determine which features actually needed, and remove the rest
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "voice",
]
version = "0.10"

[dependencies.songbird]
git = "https://github.com/richteer/songbird"
branch = "richteer/ytdl-ffmpeg-args"
features = ["yt-dlp"]
