[package]
name = "the-minstrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"

minstrel-config = { path = "../minstrel-config" }
discord = { path = "../discord" }
