[package]
name = "the-minstrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"

music = { path = "../music" }
minstrel-config = { path = "../minstrel-config" }

# Used to provide a web server for dashboards, APIs, etc
warp = { version = "0.3", optional = true }

# Provides a player backend, web API
discord = { path = "../discord", optional = true }


[features]
default = ["discord-player", "discord-webdash", "web-server"]
discord-player = ["discord"]
discord-webdash = ["discord-player", "web-server"]
web-server = ["warp"]