[package]
name = "music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube_dl = "0.8.0"
rand = "0.8.4"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
priority-queue = "1.2.1"
async-trait = "0.1"
chrono = "0.4"
pbkdf2 = "0.11"

minstrel-config = { path = "../minstrel-config" }
model = { path = "../model" }

# TODO: Slated for removal?
tokio = { version = "1.0", features = ["sync"] }

db = { path = "../db" }
