[package]
name = "webdash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew  = "0.19"
yew-agent = "0.1"
gloo-timers = "0.2"
gloo-net = "0.2"
futures-util = { version = "0.3", features = ["sink"] }
wasm-bindgen-futures = "0.4"
log = "0.4"
wasm-logger = "0.2"
serde = "1.0"
serde_json = "1.0"
web-sys = "0.3"
yew-feather = "0.2.1"
yew-hooks= "0.1"

model = { path = "../model" }