# TODO: Push this as a standalone crate maybe
# TODO: Probably allow passthrough styling somehow, don't depend on bulma
[package]
name = "yew-toast"
version = "0.1.0"
edition = "2021"

[dependencies]
yew  = "0.20"
gloo-timers = "0.2"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
web-sys = "0.3"
yew-hooks= "0.2"
